# Delivery-Tools

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  PROJECT_MEMORY.md  README.md  app.py  check_deploy.py  pyproject.toml  requirements.txt  run.bat  run.sh
.impeccable/: design.json
.impeccable/live/: config.json
admin-console/source-code/: admin_console_routes.py
admin-console/templates/: admin.html  admin_analytics.html  admin_audit.html  admin_console.html  admin_database.html  admin_email.html  admin_logo.html  admin_screen_edit.html  admin_screens.html  admin_security.html  admin_source_edit.html  admin_sources.html  admin_status.html  admin_storage.html  admin_users.html  admin_users_bulk.html
auto-backup-revert-tool/: documentation.md
auto-backup-revert-tool/configuration/: README.md
auto-backup-revert-tool/dependencies/: email_utils.py
auto-backup-revert-tool/samples/: 01_SBC-Upgrade_Gold_8_26759_26765.sql  sample_FlowEngine_rollback.sql
auto-backup-revert-tool/scripts/: README.md
auto-backup-revert-tool/source-code/: abr_routes.py  core.py  scheduler.py
auto-backup-revert-tool/templates/: admin.html  admin_job.html  admin_logo.html  admin_source_edit.html  admin_sources.html  admin_users.html  dashboard.html  history.html  result.html  review.html  upload.html
database/: documentation.md
database/database-config/: db_migrate.py  db_providers.py  (+1 more)
docs/: AUDIT_LOGGING.md  PLATFORM_FEATURES.md  SUBTOOL_BLUEPRINT.md  architecture.md  deployment-guide.md  user-guide.md
encrypt-decrypt-tool/: documentation.md
landing-page/: documentation.md
login/: documentation.md
query-generator-tool/: documentation.md
release-tracker-tool/: documentation.md
static/: app.js  charts.js  style.css
templates/: _edit_content.html  _flash.html  _status_badge.html  base.html  tool_base.html
tool-3/: documentation.md
xpm-automator-tool/: documentation.md
(+88 files in other folders)
